#9 Updated DBWrite and DbiControl

--- a/docs/api-reference/CRMScript.Native.DBWrite.yml
+++ b/docs/api-reference/CRMScript.Native.DBWrite.yml
@@ -3,19 +3,18 @@ items:
 - uid: CRMScript.Native.DBWrite
   commentId: T:CRMScript.Native.DBWrite
   id: DBWrite
-  so.intellisense: Void.DBWrite
   langs:
   - crmscript
   children:
+  - CRMScript.Native.DBWrite.#ctor
   - CRMScript.Native.DBWrite.addClob(String,String)
-  - CRMScript.Native.DBWrite.addDate(String)
-  - CRMScript.Native.DBWrite.addDateTime(String)
+  - CRMScript.Native.DBWrite.addDate(String,Date)
+  - CRMScript.Native.DBWrite.addDateTime(String,DateTime)
   - CRMScript.Native.DBWrite.addInteger(String,Integer)
   - CRMScript.Native.DBWrite.addString(String,String)
   - CRMScript.Native.DBWrite.addTable(String)
   - CRMScript.Native.DBWrite.addTime(String,Time)
   - CRMScript.Native.DBWrite.addWhereId(Integer)
-  - CRMScript.Native.DBWrite.#ctor()
   - CRMScript.Native.DBWrite.delete()
   - CRMScript.Native.DBWrite.insert()
   - CRMScript.Native.DBWrite.update()
@@ -23,8 +22,23 @@ items:
   nameWithType: DBWrite
   fullName: CRMScript.Native.DBWrite
   type: Class
-  summary: "\nThis class is obsolete. Use SearchEngine to insert or update data to the database. Use the class ExtraTable if you want to update ExtraTable data.\n"
+  summary: "\nObsolete. Use SearchEngine to insert or update data to the database. Use the class ExtraTable if you want to update ExtraTable data.\n"
   example: 
+- uid: CRMScript.Native.DBWrite.#ctor
+  commentId: M:CRMScript.Native.DBWrite.#ctor
+  id: '#ctor'
+  so.intellisense: Void.DBWrite
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: DBWrite.#ctor
+  fullName: CRMScript.Native.DBWrite.#ctor
+  type: Constructor
+  summary: "\nInitializes a new instance of the DBWrite class.\n"
+  remarks: "\nObsolete! Use SearchEngine or ExtraTable.\n"
+  syntax: 
+    content: DBWrite
+  example:
 - uid: CRMScript.Native.DBWrite.addClob(String,String)
   commentId: M:CRMScript.Native.DBWrite.addClob(String,String)
   id: 'addClob(String,String)'
@@ -35,55 +49,67 @@ items:
   nameWithType: DBWrite.addClob(String,String)
   fullName: CRMScript.Native.DBWrite.addClob(String,String)
   type: Method
-  summary: "\nAdd a CLOB column to write in the table.\n"
+  summary: "\nAdds a CLOB column to write in the table.\n"
   remarks: 
   syntax: 
-    content: addClob(String name, String value)
+    content: Void addClob(String name, String value)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of the column.
     - id: value
       type: CRMScript.Global.String
-      description: 
+      description: The value to write.
+    return:
+      type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.Native.DBWrite.addDate(String)
-  commentId: M:CRMScript.Native.DBWrite.addDate(String)
-  id: 'addDate(String)'
+- uid: CRMScript.Native.DBWrite.addDate(String,Date)
+  commentId: M:CRMScript.Native.DBWrite.addDate(String,Date)
+  id: 'addDate(String,Date)'
   so.intellisense: DBWrite.addDate
   langs:
   - crmscript
-  name: 'addDate(String)'
-  nameWithType: DBWrite.addDate(String)
-  fullName: CRMScript.Native.DBWrite.addDate(String)
+  name: 'addDate(String,Date)'
+  nameWithType: DBWrite.addDate(String,Date)
+  fullName: CRMScript.Native.DBWrite.addDate(String,Date)
   type: Method
-  summary: "\nAdd a Date column to write in the table.\n"
+  summary: "\nAdds a Date column to write in the table.\n"
   remarks: 
   syntax: 
-    content: addDate(String name, Date value)
+    content: Void addDate(String name, Date value)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of the column.
+    - id: value
+      type: CRMScript.Global.String
+      description: The value to write.
+    return:
+      type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.Native.DBWrite.addDateTime(String)
-  commentId: M:CRMScript.Native.DBWrite.addDateTime(String)
-  id: 'addDateTime(String)'
+- uid: CRMScript.Native.DBWrite.addDateTime(String,DateTime)
+  commentId: M:CRMScript.Native.DBWrite.addDateTime(String,DateTime)
+  id: 'addDateTime(String,DateTime)'
   so.intellisense: DBWrite.addDateTime
   langs:
   - crmscript
-  name: 'addDateTime(String)'
-  nameWithType: DBWrite.addDateTime(String)
-  fullName: CRMScript.Native.DBWrite.addDateTime(String)
+  name: 'addDateTime(String,DateTime)'
+  nameWithType: DBWrite.addDateTime(String,DateTime)
+  fullName: CRMScript.Native.DBWrite.addDateTime(String,DateTime)
   type: Method
-  summary: "\nAdd a DateTime column to write in the table.\n"
+  summary: "\nAdds a DateTime column to write in the table.\n"
   remarks: 
   syntax: 
-    content: addDateTime(String name, DateTime value)
+    content: Void addDateTime(String name, DateTime value)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of the column.
+    - id: value
+      type: CRMScript.Global.String
+      description: The value to write.
+    return:
+      type: CRMScript.Global.Void 
   example: 
 - uid: CRMScript.Native.DBWrite.addInteger(String,Integer)
   commentId: M:CRMScript.Native.DBWrite.addInteger(String,Integer)
@@ -95,17 +121,19 @@ items:
   nameWithType: DBWrite.addInteger(String,Integer)
   fullName: CRMScript.Native.DBWrite.addInteger(String,Integer)
   type: Method
-  summary: "\nAdd a Integer column to write in the table.\n"
+  summary: "\nAdds an Integer column to write in the table.\n"
   remarks: 
   syntax: 
-    content: addInteger(String name, Integer value)
+    content: Void addInteger(String name, Integer value)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of the column.
     - id: value
-      type: CRMScript.Global.Integer
-      description: 
+      type: CRMScript.Global.String
+      description: The value to write.
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DBWrite.addString(String,String)
   commentId: M:CRMScript.Native.DBWrite.addString(String,String)
@@ -117,17 +145,19 @@ items:
   nameWithType: DBWrite.addString(String,String)
   fullName: CRMScript.Native.DBWrite.addString(String,String)
   type: Method
-  summary: "\nAdd a String column to write in the table.\n"
+  summary: "\nAdds a String column to write in the table.\n"
   remarks: 
   syntax: 
-    content: addString(String name, String value)
+    content: Void addString(String name, String value)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of the column.
     - id: value
       type: CRMScript.Global.String
-      description: 
+      description: The value to write.
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DBWrite.addTable(String)
   commentId: M:CRMScript.Native.DBWrite.addTable(String)
@@ -139,14 +169,16 @@ items:
   nameWithType: DBWrite.addTable(String)
   fullName: CRMScript.Native.DBWrite.addTable(String)
   type: Method
-  summary: "\nAdds a table to be written to. Can only be one.\n"
-  remarks: 
+  summary: "\nAdds a table to be written to.\n"
+  remarks: "\nCan only be one.\n"
   syntax: 
-    content: addTable(String tableName)
+    content: Void addTable(String tableName)
     parameters:
     - id: tableName
       type: CRMScript.Global.String
-      description: 
+      description: The name of the table, for example, ticket.
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DBWrite.addTime(String,Time)
   commentId: M:CRMScript.Native.DBWrite.addTime(String,Time)
@@ -158,17 +190,19 @@ items:
   nameWithType: DBWrite.addTime(String,Time)
   fullName: CRMScript.Native.DBWrite.addTime(String,Time)
   type: Method
-  summary: "\nAdd a Time column to write in the table.\n"
+  summary: "\nAdds a Time column to write in the table.\n"
   remarks: 
   syntax: 
-    content: addTime(String name, Time value)
+    content: Void addTime(String name, Time value)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of the column.
     - id: value
-      type: CRMScript.Global.Time
-      description: 
+      type: CRMScript.Global.String
+      description: The value to write.
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DBWrite.addWhereId(Integer)
   commentId: M:CRMScript.Native.DBWrite.addWhereId(Integer)
@@ -180,30 +214,17 @@ items:
   nameWithType: DBWrite.addWhereId(Integer)
   fullName: CRMScript.Native.DBWrite.addWhereId(Integer)
   type: Method
-  summary: "\nSet the value of the id of the entry to write to.\n"
+  summary: "\nSets the value of the ID of the entry to write to.\n"
   remarks: 
   syntax: 
-    content: addWhereId(Integer id)
+    content: Vodi addWhereId(Integer id)
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: 
-  example: 
-- uid: CRMScript.Native.DBWrite.#ctor()
-  commentId: M:CRMScript.Native.DBWrite.#ctor()
-  id: '#ctor()'
-  so.intellisense: Void.DBWrite
-  langs:
-  - crmscript
-  name: '#ctor()'
-  nameWithType: DBWrite.#ctor()
-  fullName: CRMScript.Native.DBWrite.#ctor()
-  type: Constructor
-  summary: "\nThis class is obsolete. Use SearchEngine to insert or update data to the database. Use the class ExtraTable if you want to update ExtraTable data.\n"
-  remarks: 
-  syntax: 
-    content: DBWrite
-  example: 
+      description: The ID of the row to write to.
+    return:
+      type: CRMScript.Global.Void
+  example:  
 - uid: CRMScript.Native.DBWrite.delete()
   commentId: M:CRMScript.Native.DBWrite.delete()
   id: 'delete()'
@@ -214,11 +235,13 @@ items:
   nameWithType: DBWrite.delete()
   fullName: CRMScript.Native.DBWrite.delete()
   type: Method
-  summary: "\nDelete the specified row in the specified table.\n"
+  summary: "\nDeletes the specified row in the specified table.\n"
   remarks: 
   syntax: 
-    content: delete()
-    parameters:
+    content: Void delete()
+    parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DBWrite.insert()
   commentId: M:CRMScript.Native.DBWrite.insert()
@@ -230,11 +253,14 @@ items:
   nameWithType: DBWrite.insert()
   fullName: CRMScript.Native.DBWrite.insert()
   type: Method
-  summary: "\nExecute insert-query with the specified columns and values.<p></p>\n<ul><li><strong>Returns:</strong>The id of the inserted row.</li></ul>\n"
+  summary: "\nExecutes insert-query with the specified columns and values.\n"
   remarks: 
   syntax: 
-    content: insert()
-    parameters:
+    content: Integer insert()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The ID of the inserted row.
   example: 
 - uid: CRMScript.Native.DBWrite.update()
   commentId: M:CRMScript.Native.DBWrite.update()
@@ -246,11 +272,13 @@ items:
   nameWithType: DBWrite.update()
   fullName: CRMScript.Native.DBWrite.update()
   type: Method
-  summary: "\nExecute update-query with the specified columns and values.\n"
+  summary: "\nExecutes update-query with the specified columns and values.\n"
   remarks: 
   syntax: 
-    content: update()
-    parameters:
+    content: Void update()
+    parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.DBWrite
@@ -277,3 +305,21 @@ references:
   name: Time
   nameWithType: Time
   fullName: CRMScript.Global.Time
+- uid: CRMScript.Global.DateTime
+  commentId: T:CRMScript.Global.DateTime
+  isExternal: true
+  name: DateTime
+  nameWithType: DateTime
+  fullName: CRMScript.Global.DateTime
+- uid: CRMScript.Global.Date
+  commentId: T:CRMScript.Global.Date
+  isExternal: true
+  name: Date
+  nameWithType: Date
+  fullName: CRMScript.Global.Date
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
