--- a/docs/api-reference/CRMScript.Native.DbiControl.yml
+++ b/docs/api-reference/CRMScript.Native.DbiControl.yml
@@ -3,34 +3,33 @@ items:
 - uid: CRMScript.Native.DbiControl
   commentId: T:CRMScript.Native.DbiControl
   id: DbiControl
-  so.intellisense: Void.DbiControl
   langs:
   - crmscript
   children:
-  - CRMScript.Native.DbiControl.#ctor()
+  - CRMScript.Native.DbiControl.#ctor
   - CRMScript.Native.DbiControl.getObject()
   - CRMScript.Native.DbiControl.getParameter(String)
   - CRMScript.Native.DbiControl.getParameters()
   - CRMScript.Native.DbiControl.saveParameter(String,String)
-  - CRMScript.Native.DbiControl.sendObject()
+  - CRMScript.Native.DbiControl.sendObject(Map)
   - CRMScript.Native.DbiControl.setParameter(String,String)
   name: DbiControl
   nameWithType: DbiControl
   fullName: CRMScript.Native.DbiControl
   type: Class
-  summary: 
+  summary: "\nUsed for communicating with DBI agents to share data with external systems.\n"
   example: 
-- uid: CRMScript.Native.DbiControl.#ctor()
-  commentId: M:CRMScript.Native.DbiControl.#ctor()
-  id: '#ctor()'
+- uid: CRMScript.Native.DbiControl.#ctor
+  commentId: M:CRMScript.Native.DbiControl.#ctor
+  id: '#ctor'
   so.intellisense: Void.DbiControl
   langs:
   - crmscript
-  name: '#ctor()'
-  nameWithType: DbiControl.#ctor()
-  fullName: CRMScript.Native.DbiControl.#ctor()
+  name: '#ctor'
+  nameWithType: DbiControl.#ctor
+  fullName: CRMScript.Native.DbiControl.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the DbiControl class.\n"
   remarks: 
   syntax: 
     content: DbiControl
@@ -45,11 +44,14 @@ items:
   nameWithType: DbiControl.getObject()
   fullName: CRMScript.Native.DbiControl.getObject()
   type: Method
-  summary: "\nWhen fetching data from external system, this function is called repedly.<p></p>\nReturns a map of fields and values for the currently fetched object\n"
+  summary: "\nWhen fetching data from external system, this function is called repeatedly.\n"
   remarks: 
   syntax: 
-    content: getObject()
-    parameters:
+    content: Map getObject()
+    parameters: []
+    return:
+      type: CRMScript.Global.Map
+      description: Field-value pairs for the currently fetched object.
   example: 
 - uid: CRMScript.Native.DbiControl.getParameter(String)
   commentId: M:CRMScript.Native.DbiControl.getParameter(String)
@@ -61,14 +63,17 @@ items:
   nameWithType: DbiControl.getParameter(String)
   fullName: CRMScript.Native.DbiControl.getParameter(String)
   type: Method
-  summary: "\nThis function returns the value of the given parameter.\n"
+  summary: "\nReturns the value of the given parameter.\n"
   remarks: 
   syntax: 
-    content: getParameter(String name)
+    content: String getParameter(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: Name of the parameter to get the value of.
+    return:
+      type: CRMScript.Global.String
+      description: The value of the named parameter.
   example: 
 - uid: CRMScript.Native.DbiControl.getParameters()
   commentId: M:CRMScript.Native.DbiControl.getParameters()
@@ -80,11 +85,14 @@ items:
   nameWithType: DbiControl.getParameters()
   fullName: CRMScript.Native.DbiControl.getParameters()
   type: Method
-  summary: "\nThis functions is used to retrieve parameters for a DBI setup. It can among else define parameters for limiting the data set, or whatever else you define under the &quot;Settings/DBI&quot; section of eJournal. You will also get saved parameters* so that you can store values from one run to another.<p></p>\nReturns a map of parameters and values.\n"
-  remarks: 
+  summary: "\nRetrieves parameters for a DBI setup.\n"
+  remarks: "\nIt can among else define parameters for limiting the data set, or whatever else you define under the &quot;Settings/DBI&quot; section of eJournal. You will also get saved parameters so that you can store values from one run to another.\n"
   syntax: 
-    content: getParameters()
-    parameters:
+    content: Map getParameters()
+    parameters: []
+    return:
+      type: CRMScript.Global.Map
+      description: Field-value pairs.
   example: 
 - uid: CRMScript.Native.DbiControl.saveParameter(String,String)
   commentId: M:CRMScript.Native.DbiControl.saveParameter(String,String)
@@ -96,33 +104,40 @@ items:
   nameWithType: DbiControl.saveParameter(String,String)
   fullName: CRMScript.Native.DbiControl.saveParameter(String,String)
   type: Method
-  summary: "\nThis function saves a parameter to the object.\n"
+  summary: "\nSaves a parameter to the object.\n"
   remarks: 
   syntax: 
-    content: saveParameter(String name, String val)
+    content: Void saveParameter(String name, String val)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: Name of parameter to save for later retrieval by other DBI integration runs.
     - id: val
       type: CRMScript.Global.String
-      description: 
+      description: The value to be saved for the given parameter.
+    return:
+      type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.Native.DbiControl.sendObject()
-  commentId: M:CRMScript.Native.DbiControl.sendObject()
-  id: 'sendObject()'
+- uid: CRMScript.Native.DbiControl.sendObject(Map)
+  commentId: M:CRMScript.Native.DbiControl.sendObject(Map)
+  id: 'sendObject(Map)'
   so.intellisense: DbiControl.sendObject
   langs:
   - crmscript
-  name: 'sendObject()'
-  nameWithType: DbiControl.sendObject()
-  fullName: CRMScript.Native.DbiControl.sendObject()
+  name: 'sendObject(Map)'
+  nameWithType: DbiControl.sendObject(Map)
+  fullName: CRMScript.Native.DbiControl.sendObject(Map)
   type: Method
   summary: "\nThis function will send an object to the external system agent, during a DBI integration session.\n"
-  remarks: 
+  remarks: "\nThis may be a map of table.field_name and value, for instance, for an ODBC agent.\n"
   syntax: 
-    content: sendObject(Map values)
+    content: Void sendObject(Map values)
     parameters:
+    - id: values
+      type: CRMScript.Global.Map
+      description: Field-value pairs that define the object in a way that is meaningful to the external agent.
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DbiControl.setParameter(String,String)
   commentId: M:CRMScript.Native.DbiControl.setParameter(String,String)
@@ -134,17 +149,19 @@ items:
   nameWithType: DbiControl.setParameter(String,String)
   fullName: CRMScript.Native.DbiControl.setParameter(String,String)
   type: Method
-  summary: "\nThis function allows you to set parameter values that is sent to the external DBI agent. The parameters set using this function is not saved for later retrieval.\n"
-  remarks: 
+  summary: "\nAllows you to set parameter values that are sent to the external DBI agent.\n"
+  remarks: "\nThe parameters set using this function are not saved for later retrieval.\n"
   syntax: 
-    content: setParameter(String name, String val)
+    content: Void setParameter(String name, String val)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of the parameter (for example, resultSet.size).
     - id: val
       type: CRMScript.Global.String
-      description: 
+      description: A string representation of the value (for example, 100).
+    return:
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.DbiControl
@@ -159,3 +176,21 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Bool
+  commentId: T:CRMScript.Global.Bool
+  isExternal: true
+  name: Bool
+  nameWithType: Bool
+  fullName: CRMScript.Global.Bool
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
+  isExternal: true
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
